<resources>
    <string name="app_name">Github User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_menu">About</string>
    <string name="search_for_a_github_account">Search for a github account</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follower_list">Followers List</string>
    <string name="following_list">Following List</string>
    <string name="view_github">View Github</string>
    <string name="test">Test</string>
    <string name="detail">Detail</string>
    <string name="repos">Repos</string>
    <string name="dzakyadlh">\@dzakyadlh</string>
    <string name="my_name">Dzaky Adla Hikmatiyar</string>
    <string name="my_bio">Just a person who loves codes, anime, and games. On the way to be an outstanding Full Stack Developer.</string>
    <string name="visit_my_github_page">Visit my GitHub page</string>
    <string name="favorite">favorite</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
</resources>